first load resources added
